--- a/pami/synapticAnnealingBib.bib
+++ b/pami/synapticAnnealingBib.bib
@@ -533,4 +533,10 @@
 	year = {1987}
 }
 
+@misc{ingber1989veryfastsimulatedreannealing,
+	author = {Ingber, Lester},
+	title = {Very Fast Simulated Re-Annealing},
+	year = {1989}
+}
+
 
