--- a/thesis/doc/AFIT LaTeX/synapticAnnealingBib.bib
+++ b/thesis/doc/AFIT LaTeX/synapticAnnealingBib.bib
@@ -381,21 +381,20 @@
 	year = 1986
 }
 
-@ARTICLE{das2005qakcs,
-	author = {{Das}, A. and {Chakrabarti}, B.~K. and {Stinchcombe}, R.~B.},
-	title = "{Quantum annealing in a kinetically constrained system}",
-	journal = {\pre},
-	eprint = {cond-mat/0502167},
-	keywords = {Numerical optimization, Tunneling traversal time quantum Zeno dynamics, Quantum Monte Carlo methods, Other topics in statistical physics thermodynamics and nonlinear dynamical systems},
-	year = 2005,
-	month = aug,
-	volume = 72,
-	number = 2,
-	eid = {026701},
+
+@article{das2005qakcs,
+	title = {Quantum annealing in a kinetically constrained system},
+	author = {Das, Arnab and Chakrabarti, Bikas K. and Stinchcombe, Robin B.},
+	journal = {Phys. Rev. E},
+	volume = {72},
+	issue = {2},
 	pages = {026701},
+	numpages = {4},
+	year = {2005},
+	month = {Aug},
+	publisher = {American Physical Society},
 	doi = {10.1103/PhysRevE.72.026701},
-	adsurl = {http://adsabs.harvard.edu/abs/2005PhRvE..72b6701D},
-	adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+	url = {http://link.aps.org/doi/10.1103/PhysRevE.72.026701}
 }
 
 
@@ -490,4 +489,154 @@
 	pages={303-314},
 	language={English}
 }
+
+
+@article{tsallis1996generalizedsimulatedannealing,
+	added-at = {2008-04-22T10:36:30.000+0200},
+	author = {Tsallis, Constantino and Stariolo, Daniel A.},
+	biburl = {http://www.bibsonomy.org/bibtex/27ba020ebd42abbd12758f908c68758f5/smicha},
+	day = 15,
+	description = {Physica A},
+	interhash = {967f9f4f72483811cdfdccc0b4a6e01d},
+	intrahash = {7ba020ebd42abbd12758f908c68758f5},
+	journal = {Physica A: Statistical and Theoretical Physics},
+	keywords = {Simulated annealing},
+	month = Nov,
+	number = {1-2},
+	pages = {395--406},
+	timestamp = {2008-04-22T11:04:21.000+0200},
+	title = {Generalized simulated annealing},
+	url = {http://www.sciencedirect.com/science/article/B6TVG-3YK5TC8-2H/1/d040f1408073d6a09dc185f38673e3dd},
+	volume = 233,
+	year = 1996
+}
+
+@article{szu1987fastsimulatedannealing,
+	abstract = {{Simulated annealing is a stochastic strategy for searching the ground state. A fast simulated annealing (FSA) is a semi-local search and consists of occasional long jumps. The cooling schedule of the FSA algorithm is inversely linear in time which is fast compared with the classical simulated annealing (CSA) which is strictly a local search and requires the cooling schedule to be inversely proportional to the logarithmic function of time. A general D-dimensional Cauchy probability for generating the state is given. Proofs for both FSA and CSA are sketched. A double potential well is used to numerically illustrate both schemes.}},
+	author = {Szu, Harold and Hartley, Ralph},
+	citeulike-article-id = {10081901},
+	citeulike-linkout-0 = {http://dx.doi.org/10.1016/0375-9601(87)90796-1},
+	comment = {Use a Cauchy machine instead of a Boltzman machine, inverse linear temperature scheme},
+	doi = {10.1016/0375-9601(87)90796-1},
+	issn = {03759601},
+	journal = {Physics Letters A},
+	keywords = {simulated\_annealing},
+	month = jun,
+	number = {3-4},
+	pages = {157--162},
+	posted-at = {2011-11-29 18:50:40},
+	priority = {0},
+	title = {{Fast simulated annealing}},
+	url = {http://dx.doi.org/10.1016/0375-9601(87)90796-1},
+	volume = {122},
+	year = {1987}
+}
+
+@misc{ingber1989veryfastsimulatedreannealing,
+	author = {Ingber, Lester},
+	title = {Very Fast Simulated Re-Annealing},
+	year = {1989}
+}
+
+
+
+@inproceedings{lee2007improvinggeneralizationcapabilitynnusingsa,
+	added-at = {2009-01-04T00:00:00.000+0100},
+	author = {Lee, Yeejin and Lee, Jong-Seok and Lee, Sun-Young and Park, Cheol Hoon},
+	biburl = {http://www.bibsonomy.org/bibtex/287673dcc869388d5a7fecd64b5953c63/dblp},
+	booktitle = {IEEE Congress on Evolutionary Computation},
+	crossref = {conf/cec/2007},
+	date = {2009-01-04},
+	description = {dblp},
+	ee = {http://dx.doi.org/10.1109/CEC.2007.4424918},
+	interhash = {6432f40444490f986bab6352f0660a1c},
+	intrahash = {87673dcc869388d5a7fecd64b5953c63},
+	keywords = {dblp},
+	pages = {3447-3453},
+	publisher = {IEEE},
+	timestamp = {2009-01-06T11:34:12.000+0100},
+	title = {Improving generalization capability of neural networks based on simulated annealing.},
+	url = {http://dblp.uni-trier.de/db/conf/cec/cec2007.htm},
+	year = 2007
+}
+
+@book{laarhoven1987satheoryapplication,
+	editor = {Laarhoven, P. J. M. and Aarts, E. H. L.},
+	title = {Simulated Annealing: Theory and Applications},
+	year = {1987},
+	isbn = {9-027-72513-6},
+	publisher = {Kluwer Academic Publishers},
+	address = {Norwell, MA, USA},
+} 
+
+@INPROCEEDINGS{park1997networkcomplexitygeneralization, 
+	author={Sangbong Park and Cheol Hoon Park}, 
+	booktitle={Neural Networks,1997., International Conference on}, 
+	title={Network complexity and generalization}, 
+	year={1997}, 
+	volume={1}, 
+	pages={298-301 vol.1}, 
+	keywords={digital simulation;function approximation;genetic algorithms;learning (artificial intelligence);mathematics computing;multilayer perceptrons;degrees of freedom;dynamic range;function approximation;generalization capability;network complexity;neural network;sigmoidal hidden neurons;Artificial neural networks;Computer simulation;Dynamic range;Electronic mail;Estimation error;Function approximation;Neural networks;Neurons;Optimization methods;Testing}, 
+	doi={10.1109/ICNN.1997.611682}, 
+	month={Jun},
+}
+
+@article{engel1988teachingfeedforwardnueralnetsbysa,
+	author = {Engel, Jonathan},
+	title = {Teaching Feed-forward Neural Networks by Simulated Annealing},
+	journal = {Complex Syst.},
+	issue_date = {December 1988},
+	volume = {2},
+	number = {6},
+	month = dec,
+	year = {1988},
+	issn = {0891-2513},
+	pages = {641--648},
+	numpages = {8},
+	url = {http://dl.acm.org/citation.cfm?id=65512.65514},
+	acmid = {65514},
+	publisher = {Complex Systems Publications, Inc.},
+	address = {Champaign, IL, USA},
+} 
+
+@article{sexton1999beyondbackpropusingsa,
+	author = {Sexton, Randall S. and Dorsey, Robert E. and Johnson, John D.},
+	title = {Beyond Back Propagation: Using Simulated Annealing for Training Neural Networks},
+	journal = {J. End User Comput.},
+	issue_date = {July/Sept. 1999},
+	volume = {11},
+	number = {3},
+	month = jul,
+	year = {1999},
+	issn = {1063-2239},
+	pages = {3--10},
+	numpages = {8},
+	url = {http://dl.acm.org/citation.cfm?id=329748.329752},
+	acmid = {329752},
+	publisher = {IGI Global},
+	address = {Hershey, PA, USA},
+} 
+
+
+
+
+@article{geman1984stochasticrelaxation,
+	author = {Geman, Stuart and Geman, Donald},
+	title = {Stochastic Relaxation, Gibbs Distributions, and the Bayesian Restoration of Images},
+	journal = {IEEE Trans. Pattern Anal. Mach. Intell.},
+	issue_date = {November 1984},
+	volume = {6},
+	number = {6},
+	month = nov,
+	year = {1984},
+	issn = {0162-8828},
+	pages = {721--741},
+	numpages = {21},
+	url = {http://dx.doi.org/10.1109/TPAMI.1984.4767596},
+	doi = {10.1109/TPAMI.1984.4767596},
+	acmid = {2286617},
+	publisher = {IEEE Computer Society},
+	address = {Washington, DC, USA},
+	keywords = {Annealing, Gibbs distribution, MAP estimate, Markov random field, image restoration, line process, relaxation, scene modeling, spatial degradation},
+} 
 
